# Asteroid687

./: .gitignore  687-GridworldLearntPolicy.txt  ActorCriticScratch.py  CatVsMonstersLearntPolicy.txt  MCTS.py  README.MD  ReinforceBaseline687_Gridworld.py  ReinforceBaselineCatVsMonsters.py  ReinforceBaselineImp.py  asteroid_env.py  asteroid_env_1.py  demo_visual.py  eval_winrate.py  example_usage.py  improved_td_scratch.py  play_sb3_policy.py  pyproject.toml  requirements.txt  run_actor_critic_td.py  smoke_test.py  status.txt  td_scratch.py  td_scratch_gae.py  train_ppo_sb3.py  train_sac_sb3.py  train_sb3_baseline.py  train_td3_sb3.py  utils.py
Game/: asteroid.py  main.py  player.py
MonteCarloTreeSearch/: MCTS.py
MonteCarloTreeSearch/results/: MCTS_Hyperparameter_Study.txt
Reinforce-Baseline-Code-Plots/: hyperparameter_tuning.py
Reinforce-Baseline-Code-Plots/grid_search_cat_monsters/: run_th_0.001_w_0.05.txt  run_th_0.001_w_0.1.txt  run_th_0.001_w_0.2.txt  run_th_0.005_w_0.05.txt  run_th_0.005_w_0.1.txt  run_th_0.005_w_0.2.txt  run_th_0.01_w_0.05.txt  run_th_0.01_w_0.2.txt
Reinforce-Baseline-Code-Plots/grid_search_results/: run_th_0.001_w_0.1.txt  run_th_0.001_w_0.2.txt  run_th_0.005_w_0.05.txt  run_th_0.005_w_0.1.txt  (+1 more)
asteroids_env/: __init__.py
grid_search_cat_monsters/: run_th_0.01_w_0.1.txt
grid_search_results/: run_th_0.001_w_0.05.txt  run_th_0.01_w_0.05.txt  run_th_0.01_w_0.1.txt  run_th_0.01_w_0.2.txt
logs/: fast_td_policy.pth  hyperparams.txt  hyperparams_exp.txt  td_actor_policy_v2.pth  training_log.csv  training_log_2.csv
results/: MCTS.txt
(+15 files in other folders)
